# forge-workflow

./: .coverage-baseline.json  .gitattributes  .gitignore  LICENSE  README.md  port-copilot.md  port-copilot2.md  pyproject.toml
.forge/: config.yaml  skill-hashes.json
.github/: release.yml  test.yml
bots/: dev-identity.md  dev2-identity.md
docs/: bot-setup-guide.md
docs/plans/: ci-workflows.md
forge_workflow/: __init__.py  config.py
forge_workflow/cli/: __init__.py  bot_cmd.py  config_cmd.py  doctor.py  init_cmd.py  main.py  pin_cmd.py  self_update.py  update_skills_cmd.py
forge_workflow/hooks/: __init__.py  _repo_root.py  approval_logger.py  block_commit_to_main.py  circuit_breaker_init.py  compound_command_interceptor.py  dangerous_command_halt.py  destructive_git_halt.py  file_protection.py  post_assessment_to_issue.py  post_plan_to_issue.py  ruff_fix.py  secret_detection.py  secret_file_scanner.py  sequential_failure_breaker.py  session_telemetry.py  shell_expansion_guard.py
forge_workflow/lib/: bot_config.py  bot_runtime.py  doc_manager.py  doc_sections.py  scaffold.py  settings_generator.py  skill_sync.py  version_check.py
forge_workflow/templates/: config.yaml
scripts/: statusline-command.sh
scripts/ci/: coverage_ratchet.py
tests/: test_doc_manager.py  test_doctor_pin.py  test_forge_config.py  test_scaffold.py  test_settings_generator.py
tests/hooks/: test_circuit_breakers.py  test_compound_command_interceptor.py  test_dangerous_command_halt.py  test_file_protection.py  test_forge_hooks_import.py  test_secret_detection.py  (+2 more)
(+24 files in other folders)
